<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="login">Login</string>
    <string name="email">email@domain.com</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click here to login</string>
    <string name="click_to_register">Click here to register</string>
    <string name="logout">Logout</string>
    <string name="profile_icon">profile_icon</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_your_email">Enter your email to sign up for this app</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_your_credentials">Enter your credentials to login for this app</string>
    <string name="login_with_email">Login with email</string>
    <string name="profile">Profile</string>
    <string name="currency">Currency</string>
    <string name="categories">Categories</string>
    <string name="currency_converter">Currency converter</string>
    <string name="view_all_expenses">View all expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="monthly_expense">Monthly expense:</string>
    <string name="_0_0">0,0 €</string>
    <string name="all_expenses">All Expenses</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="uber">Uber</string>
    <string name="_12_3">12.3</string>
    <string name="select_date">Select Date</string>
    <string name="enter_amount">Enter amount</string>
    <string name="convert">Convert</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="month_expenses">Month Expenses</string>
    <string name="new_category">New category</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="diogo_saraiva_49756">Diogo Saraiva - 49756</string>
    <string name="select_currency">Select Currency</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
</resources>