<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddExpense">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navy"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_expense"
            android:layout_marginEnd="50dp"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/uber"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="16sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/value_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/_12_3"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/datePickerInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePickerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/select_date"
            android:focusable="false"
            android:onClick="showDatePickerDialog" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/navy"
        android:text="@string/add_expense"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/white"
        android:padding="16dp" />

</LinearLayout>