<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navy"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/profile_icon"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/profile_icon"
                android:src="@drawable/profile_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_2"
        android:padding="16dp"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_expense"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/total_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="-15dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/category_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/category_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/value_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/category_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/value_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:layout_marginTop="40dp"
        android:rowCount="2"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/btn_add_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/add"
                android:contentDescription="@string/add_expense" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_expense"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_view_all_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/lupa"
                android:contentDescription="@string/view_all_expenses" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/view_all_expenses"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_currency_converter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/currency"
                android:contentDescription="@string/currency_converter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/currency_converter"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profile_icon"
                android:contentDescription="@string/profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
